(client): overflow fix on DashboatdTable.tsx and DashboardScreen.tsx

--- a/client/src/components/DashboardTable/DashboardTable.css
+++ b/client/src/components/DashboardTable/DashboardTable.css
@@ -1,14 +1,15 @@
 .DashboardTable_Filters {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .DashboardTable_Filters > * {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 20%;
-    max-width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 20%;
+  max-width: 20%;
 }
