--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,12 +1,12 @@
 .header-container {
-  height: 9rem;
+  height: 10%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .header-content {
-  height: 7.5rem;
+  height: 10%;
   display: flex;
   justify-content: space-between;
   align-items: center;
